--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
   <body>
 
     <header class="header">
-      <h1 class="header__title">Weather PWA</h1>
+      <h1 class="title">Weather PWA</h1>
       <button id="butSettings" class="headerButton" aria-label="Settings"></button>
     </header>
 
