Updates settings button

--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
 
     <header class="header">
       <h1 class="title">Weather PWA</h1>
-      <button id="butSettings" class="headerButton" aria-label="Settings"></button>
+      <button id="settings" aria-label="Settings"></button>
     </header>
 
     <main class="main">
