Updates style url

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <link rel="canonical" href="https://social-feed-feeder.herokuapp.com">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Social Feed Feeder</title>
-    <link rel="stylesheet" type="text/css" href="styles/style.css">
+    <link rel="stylesheet" type="text/css" href="styles/inline.css">
 
     <!-- PWA homescreen lovelyness -->
     <link rel="manifest" href="/manifest.json">
@@ -21,7 +21,7 @@
   <body>
 
     <header class="header">
-      <h1 class="title">Weather PWA</h1>
+      <h1 class="title">Social Feed Feeder</h1>
       <button id="settings" aria-label="Settings"></button>
     </header>
 
