Inline critical css

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <link rel="canonical" href="https://social-feed-feeder.herokuapp.com">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Social Feed Feeder</title>
-    <link rel="stylesheet" type="text/css" href="styles/inline.css">
+    INLINE-CSS
 
     <!-- PWA homescreen lovelyness -->
     <link rel="manifest" href="/manifest.json">
