Adds basic grid

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,11 @@
     <link rel="canonical" href="https://social-feed-feeder.herokuapp.com">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Social Feed Feeder</title>
+
+    <!-- TODO: Add this into gulp script -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic">
+
+    <!-- Use Gulp to inline CSS here, reducing network requests -->
     INLINE-CSS
 
     <!-- PWA homescreen lovelyness -->
@@ -20,12 +25,12 @@
   </head>
   <body>
 
-    <header class="header">
+    <header>
       <h1 class="title">Social Feed Feeder</h1>
-      <button id="settings" aria-label="Settings"></button>
+      <!-- <button id="settings" aria-label="Settings"></button> -->
     </header>
 
-    <main class="main">
+    <main class="main container">
 
     </main>
 
