Remove uneeded fonts

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <title>Social Feed Feeder</title>
 
     <!-- TODO: Add this into gulp script -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,700">
 
     <!-- Use Gulp to inline CSS here, reducing network requests -->
     INLINE-CSS
@@ -35,6 +35,5 @@
     </main>
 
     <script src="scripts/app.js" async></script>
-
   </body>
 </html>
