Adds notification when offline ready

--- a/src/index.html
+++ b/src/index.html
@@ -47,6 +47,12 @@
 
     </main>
 
+    <div id="offline-ready" class="">
+      <a href="#" id="dismiss">
+        <p>Ready to work offline<span>Dismiss</span></p>
+      </a>
+    </div>
+
     <script src="scripts/app.js" async></script>
   </body>
 </html>
