--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,7 @@
 
     <header>
       <h1 class="title">Social Feed Feeder</h1>
-      <a href="https://socialfeedfeeder.pushpad.xyz/p/2376">Push</a>
+      <!-- <a href="https://socialfeedfeeder.pushpad.xyz/p/2376">Push</a> -->
     </header>
 
     <main class="main container">
