Adds settings button

--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,9 @@
 
     <header>
       <h1 class="title">Social Feed Feeder</h1>
-      <!-- <a href="https://socialfeedfeeder.pushpad.xyz/p/2376">Push</a> -->
+      <a href="#" class="settings" id="settings">
+        <img src="/images/settings.svg" alt="user settings"/>
+      </a>
     </header>
 
     <main class="main container">
